--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-camera": "^8.0.0",
     "expo-image-picker": "^8.0.2",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
