--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.6",
     "@react-native-community/datetimepicker": "^2.2.3",
     "@react-native-community/masked-view": "^0.1.5",
     "@react-navigation/native": "^5.0.8",
@@ -32,9 +33,20 @@
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "~24.9.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "~24.9.0",
     "metro-react-native-babel-preset": "~0.56.0",
+    "prettier": "^1.19.1",
     "react-test-renderer": "~16.9.0"
   },
   "jest": {
