--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "no-console": "off",
     "react/prop-types": "off",
     "no-shadow": "off",
+    "no-underscore-dangle": "off",
     "prettier/prettier": [
       "error",
       {
