--- a/android/local.properties
+++ b/android/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Feb 15 23:01:17 BRT 2020
-sdk.dir=C\:\\Users\\Anderson\\AppData\\Local\\Android\\Sdk
+#Tue Mar 10 19:38:43 BRT 2020
+sdk.dir=/home/mister86/Android/Sdk
