--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
-    "@react-native-community/datetimepicker": "^2.2.3",
+    "@react-native-community/datetimepicker": "2.1.0",
     "@react-native-community/masked-view": "^0.1.5",
     "@react-navigation/native": "^5.0.8",
     "@react-navigation/stack": "^5.1.0",
@@ -25,8 +25,8 @@
     "react-native-gesture-handler": "1.5.0",
     "react-native-pie-chart": "^1.0.13",
     "react-native-reanimated": "1.4.0",
-    "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "2.0.0",
+    "react-native-safe-area-context": "0.6.0",
+    "react-native-screens": "2.0.0-alpha.12",
     "react-native-unimodules": "~0.7.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.1.3",
