--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "1.5.0",
     "react-native-pie-chart": "^1.0.13",
     "react-native-reanimated": "1.4.0",
